Bug Fixed [Display Clusters generated table bug]
BUG : was that whenever I clicked again on generate clusters button it , messed up the table , because it was not recalculating the clusters properly

--- a/CSS/UI.css
+++ b/CSS/UI.css
@@ -44,11 +44,7 @@ body {
     margin-left: 1%;
   }
 
-  #Cluster_Generated_pallet
-  {
-    margin-top: 5%;
-    margin-left: 26%;
-  }
+
 
   #Selected_Nodes_table th, td 
   {
